# rchip8

./: .gitmodules  Cargo.toml  README.md  c8asm.md  test.c8asm
.github/workflows/: rust.yml
roms/: ibm-logo.ch8
src/: add_carry.rs  c8asm.lalrpop  c8asm.md  carry_borrow.rs  game8.lalrpop  grammar.lalrpop  hilo.rs  instruction.rs  insts.rs  interpreter.rs  lib.rs  machine.rs  main.rs
src/compiler/: ast.rs  inst_into_u16.rs  mod.rs  parser.rs
src/game8/: ast.rs  inter_codegen.rs  mod.rs  reg_alloc.rs  three_addr.rs
src/machine/: carry_borrow.rs  decode.rs  disassemble.rs  display.rs  execute.rs  hilo.rs  insts.rs  mod.rs  timers.rs  vm.rs
src/machine/components/: decode.rs  display.rs  execute.rs  mod.rs  timers.rs
src/machine/utils/: carry_borrow.rs  mod.rs
test/: compile-test.c8asm  font-demo.c8asm  natural-numbers.c8asm  sound.c8asm
