[package]
name = "rchip8"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rchip8"

[dependencies]
rand = "~0.8.5"
clap = { version = "~4.1.4", features = ["derive"] }
sdl2 = { version = "~0.35.2", features = ["bundled"] }
log = "~0.4.17"
simple_logger = {version="~4.0.0", features = ["default", "stderr", "threads"]}

[dev-dependencies]
rstest = "~0.16.0"
