[package]
name = "rchip8"
version = "1.2.0"
edition = "2021"

[dependencies]
rand = "~0.8.5"
clap = { version = "~4.1.4", features = ["derive"] }
sdl2 = { version = "~0.35.2", features = ["bundled"] }
log = "~0.4.17"
simple_logger = { version = "~4.0.0", features = [
    "default",
    "stderr",
    "threads",
] }
lalrpop-util = { version = "~0.19", features = ["lexer"] }
regex = "~1.7"

[build-dependencies]
lalrpop = "~0.19"

[dev-dependencies]
rstest = "~0.16.0"
